<resources>
    <string name="app_name">Bar DMenor</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="cpf">CPF</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="text_cadastro">Criar conta</string>
    <string name="titulo_cadastro_FormCadastro">Crie a sua conta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="descricao_prod1">Alameda Casa Branca, 92 - Jardim Paulista \nSão Paulo - SP, 01408-001 \nReferência: em frente ao My Fucking Comedy Club</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>