<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormCadastro">

    <TextView
        android:id="@+id/titulo_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_cadastro_FormCadastro"
        android:textSize="39sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/titulo_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <EditText
        android:id="@+id/cpf_cadastro"
        style="@style/cpf_limit"
        android:hint="@string/cpf"
        android:inputType="number"
        android:drawableRight="@drawable/ic_cpf"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"/>

    <EditText
        android:id="@+id/usuario_cadastro"
        style="@style/Edit_Text"
        android:hint="@string/usuario"
        android:inputType="text"
        android:drawableRight="@drawable/ic_usuario"
        app:layout_constraintTop_toBottomOf="@id/cpf_cadastro"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"/>

    <EditText
        android:id="@+id/senha_cadastro"
        style="@style/Edit_Text"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:drawableRight="@drawable/ic_eye"
        app:layout_constraintTop_toBottomOf="@id/usuario_cadastro"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"/>
    
    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button"
        android:text="@string/cadastrar"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>